--- a/diffIntegral.ui
+++ b/diffIntegral.ui
@@ -59,7 +59,11 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLineEdit" name="var"/>
+     <widget class="QLineEdit" name="var">
+      <property name="placeholderText">
+       <string>No Variable is Acceptable</string>
+      </property>
+     </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
