--- a/ui/diffIntegral.ui
+++ b/ui/diffIntegral.ui
@@ -54,28 +54,31 @@
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>Variable to get:</string>
+       <string>Variables to get:</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="var">
+      <property name="text">
+       <string/>
+      </property>
       <property name="placeholderText">
-       <string>No Variable is Acceptable</string>
+       <string>None</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>Spare Box:</string>
+       <string>To the nth Order:</string>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QLineEdit" name="_spare">
-      <property name="text">
-       <string>Don't put anything here.</string>
+     <widget class="QSpinBox" name="order">
+      <property name="value">
+       <number>1</number>
       </property>
      </widget>
     </item>
@@ -163,7 +166,6 @@
   <tabstop>addMainEquation</tabstop>
   <tabstop>addCurVar</tabstop>
   <tabstop>buttonBox</tabstop>
-  <tabstop>_spare</tabstop>
  </tabstops>
  <resources/>
  <connections>
