--- a/ui/main.ui
+++ b/ui/main.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>765</width>
+    <width>767</width>
     <height>1000</height>
    </rect>
   </property>
@@ -176,20 +176,34 @@
           </widget>
          </item>
          <item>
-          <spacer name="verticalSpacer">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeType">
-            <enum>QSizePolicy::Fixed</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>30</height>
-            </size>
-           </property>
-          </spacer>
+          <layout class="QHBoxLayout" name="horizontalLayout_7">
+           <item>
+            <widget class="QLabel" name="label_4">
+             <property name="text">
+              <string>Substitution Order:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="varOrderSetter">
+             <property name="maximumSize">
+              <size>
+               <width>777777</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>999</number>
+             </property>
+             <property name="value">
+              <number>50</number>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
          <item>
           <widget class="QPushButton" name="newRelationButton">
@@ -484,7 +498,7 @@
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_3">
             <item>
-             <widget class="QTextBrowser" name="codeInput">
+             <widget class="QPlainTextEdit" name="codeInput">
               <property name="sizeIncrement">
                <size>
                 <width>0</width>
@@ -502,16 +516,6 @@
               </property>
               <property name="sizeAdjustPolicy">
                <enum>QAbstractScrollArea::AdjustToContents</enum>
-              </property>
-              <property name="html">
-               <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-              </property>
-              <property name="textInteractionFlags">
-               <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::TextBrowserInteraction|Qt::TextEditable|Qt::TextEditorInteraction|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
               </property>
               <property name="placeholderText">
                <string>Directly execute sympy commands on the current equation</string>
@@ -552,6 +556,12 @@ p, li { white-space: pre-wrap; }
               <height>30</height>
              </size>
             </property>
+            <property name="font">
+             <font>
+              <family>Monospace</family>
+              <pointsize>10</pointsize>
+             </font>
+            </property>
             <property name="verticalScrollBarPolicy">
              <enum>Qt::ScrollBarAlwaysOn</enum>
             </property>
@@ -562,8 +572,8 @@ p, li { white-space: pre-wrap; }
              <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Monospace'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans Serif';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="placeholderText">
              <string>Code output</string>
@@ -692,7 +702,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>765</width>
+     <width>767</width>
      <height>30</height>
     </rect>
    </property>
@@ -741,14 +751,13 @@ p, li { white-space: pre-wrap; }
     <addaction name="throwError"/>
     <addaction name="rememberVarNames"/>
     <addaction name="resetVars"/>
-    <addaction name="doEval"/>
     <addaction name="implicitMult"/>
-    <addaction name="separator"/>
-    <addaction name="useSolve"/>
+    <addaction name="removeFx"/>
     <addaction name="useFixString"/>
+    <addaction name="useLn"/>
+    <addaction name="separator"/>
     <addaction name="convertLatex"/>
     <addaction name="convertVarLatex"/>
-    <addaction name="useLn"/>
    </widget>
    <widget class="QMenu" name="menuTools">
     <property name="title">
@@ -756,6 +765,7 @@ p, li { white-space: pre-wrap; }
     </property>
     <addaction name="limitButton"/>
     <addaction name="getIntDiff"/>
+    <addaction name="getSum"/>
     <addaction name="separator"/>
     <addaction name="plotButton"/>
     <addaction name="makePiecewise"/>
@@ -765,8 +775,12 @@ p, li { white-space: pre-wrap; }
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
-     <string>View</string>
+     <string>Solution</string>
     </property>
+    <addaction name="doExpand"/>
+    <addaction name="useSolve"/>
+    <addaction name="doEval"/>
+    <addaction name="separator"/>
     <addaction name="dontSimplify"/>
     <addaction name="printSolution"/>
     <addaction name="prettySolution"/>
@@ -929,6 +943,9 @@ p, li { white-space: pre-wrap; }
    <property name="checkable">
     <bool>true</bool>
    </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Evaluate Non-Symbolically</string>
    </property>
@@ -979,9 +996,6 @@ p, li { white-space: pre-wrap; }
   <action name="copyLatex">
    <property name="text">
     <string>Latex</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+C</string>
    </property>
   </action>
   <action name="copyMathML">
@@ -1075,7 +1089,7 @@ p, li { white-space: pre-wrap; }
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Convert Varaible from LaTeX</string>
+    <string>Convert Variable from LaTeX</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+L, Ctrl+V</string>
@@ -1106,6 +1120,33 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="text">
     <string>Use ln instead of log</string>
+   </property>
+  </action>
+  <action name="removeFx">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Automatically remove &quot;f(x)=&quot;</string>
+   </property>
+  </action>
+  <action name="doExpand">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Expand</string>
+   </property>
+  </action>
+  <action name="getSum">
+   <property name="text">
+    <string>Add Sum</string>
    </property>
   </action>
  </widget>
