--- a/ui/main.ui
+++ b/ui/main.ui
@@ -749,6 +749,7 @@ p, li { white-space: pre-wrap; }
      <string>Options</string>
     </property>
     <addaction name="throwError"/>
+    <addaction name="printError"/>
     <addaction name="rememberVarNames"/>
     <addaction name="resetVars"/>
     <addaction name="implicitMult"/>
@@ -770,6 +771,7 @@ p, li { white-space: pre-wrap; }
     <addaction name="plotButton"/>
     <addaction name="makePiecewise"/>
     <addaction name="runCodeAction"/>
+    <addaction name="openTrigSolver"/>
     <addaction name="separator"/>
     <addaction name="openNotes"/>
    </widget>
@@ -1147,6 +1149,22 @@ p, li { white-space: pre-wrap; }
   <action name="getSum">
    <property name="text">
     <string>Add Sum</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+G</string>
+   </property>
+  </action>
+  <action name="openTrigSolver">
+   <property name="text">
+    <string>Trig Solver</string>
+   </property>
+  </action>
+  <action name="printError">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Print Errors</string>
    </property>
   </action>
  </widget>
